# company-info-api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: admin.py  company.py  route.py
app/containers/: __init__.py  db_container.py  main_container.py  repository_container.py  service_container.py
app/core/: config.py  constants.py  dto.py  schema.py
app/db/: redis.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 05c331d03c35_add_indexes_to_companyname_.py  15bcecd43e58_init_company_models.py  cdf791bae03d_add_unique_constraint_to_names_in_.py
app/db/models/: __init__.py  company_model.py
app/domain/: company_entity.py
app/dto/: company_dto.py
app/interfaces/: company_repository.py  company_service.py  company_tag_repository.py
app/mappers/: company_mapper.py  company_tag_mapper.py
app/repositories/: company_repository.py  company_tag_repository.py
app/schemas/: company.py
app/services/: company_service.py  data_initializer.py
envs/: .env.dev.example  .env.prod.example  .env.test.example
tests/: conftest.py  pytest.ini
tests/e2e/company/: conftest.py  test_company_e2e.py
tests/integration/repositories/company/: conftest.py  test_company_repository.py  test_company_tag_repository.py
tests/integration/services/company/: conftest.py  test_company_service.py
